# vision

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/app/: Dockerfile
docker/nginx/: default.conf
src/: app.py
src/api/images/: views.py
src/badger/: badger.py
