[tool.poetry]
name = "vision"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.1"
matplotlib = "^3.5.2"
opencv-python = "^4.6.0"
Pillow = "^9.2.0"
requests = "^2.28.1"
uWSGI = "^2.0.20"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
